--- a/DiscoveryJson/firebaseml.v2beta.json
+++ b/DiscoveryJson/firebaseml.v2beta.json
@@ -206,7 +206,7 @@
       }
     }
   },
-  "revision": "20250416",
+  "revision": "20250420",
   "rootUrl": "https://firebaseml.googleapis.com/",
   "schemas": {
     "Date": {
@@ -1724,6 +1724,13 @@
           "description": "Optional. Default value of the data.",
           "type": "any"
         },
+        "defs": {
+          "additionalProperties": {
+            "$ref": "GoogleCloudAiplatformV1beta1Schema"
+          },
+          "description": "Optional. A map of definitions for use by `ref` Only allowed at the root of the schema.",
+          "type": "object"
+        },
         "description": {
           "description": "Optional. The description of the data.",
           "type": "string"
@@ -1809,6 +1816,10 @@
           },
           "type": "array"
         },
+        "ref": {
+          "description": "Optional. Allows indirect references between schema nodes. The value should be a valid reference to a child of the root `defs`. For example, the following schema defines a reference to a schema node named \"Pet\": type: object properties: pet: ref: #/defs/Pet defs: Pet: type: object properties: name: type: string The value of the \"pet\" property is a reference to the schema node named \"Pet\". See details in https://json-schema.org/understanding-json-schema/structuring",
+          "type": "string"
+        },
         "required": {
           "description": "Optional. Required properties of Type.OBJECT.",
           "items": {
@@ -1829,7 +1840,8 @@
             "INTEGER",
             "BOOLEAN",
             "ARRAY",
-            "OBJECT"
+            "OBJECT",
+            "NULL"
           ],
           "enumDescriptions": [
             "Not specified, should not be used.",
@@ -1838,7 +1850,8 @@
             "OpenAPI integer type",
             "OpenAPI boolean type",
             "OpenAPI array type",
-            "OpenAPI object type"
+            "OpenAPI object type",
+            "Null type"
           ],
           "type": "string"
         }
