--- a/DiscoveryJson/firebaseml.v2beta.json
+++ b/DiscoveryJson/firebaseml.v2beta.json
@@ -206,7 +206,7 @@
       }
     }
   },
-  "revision": "20250420",
+  "revision": "20250423",
   "rootUrl": "https://firebaseml.googleapis.com/",
   "schemas": {
     "Date": {
@@ -1713,6 +1713,10 @@
       "description": "Schema is used to define the format of input/output data. Represents a select subset of an [OpenAPI 3.0 schema object](https://spec.openapis.org/oas/v3.0.3#schema-object). More fields may be added in the future as needed.",
       "id": "GoogleCloudAiplatformV1beta1Schema",
       "properties": {
+        "additionalProperties": {
+          "description": "Optional. Can either be a boolean or an object; controls the presence of additional properties.",
+          "type": "any"
+        },
         "anyOf": {
           "description": "Optional. The value should be validated against any (one or more) of the subschemas in the list.",
           "items": {
